@@ -1,3 +1,8 @@
+2015-05-25  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/66274
+	* gcc.target/i386/pr66274.c: New test.
+
 2015-05-25  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/renaming6.ad[sb]: New test.
